--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,53 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+
+.TrafficPole{
+    height:100px;
+    width:20px;
+    background-color: black;
+    margin-left:40px;
+}
+.TrafficBg{
+    font-size:200px;
+    padding:10px;
+    height: 185px;
+    width:80px;
+    position: relative;
+    background-color: black;
+}
+.light{
+    width:50px;
+    height:50px;
+    border-radius:50%;
+    margin:4px;
+    background-color:azure;
+}
+.red{
+    display:block;
+    height:50px;
+    width:50px;
+    background-color:red;
+    border-radius: 50%;
+    margin:4px;
+}
+.yellow{
+    display:block;
+    height:50px;
+    width:50px;
+    background-color:yellow;
+    border-radius: 50%;
+    margin:4px;
+}
+.green{
+    display:block;
+    height:50px;
+    width:50px;
+    background-color:green;
+    border-radius: 50%;
+    margin:4px;
+}
+.glow{
+    opacity: .2;
+    color:azure;
+}
